--- a/src/app/pages/errata/form/form.scss
+++ b/src/app/pages/errata/form/form.scss
@@ -7,6 +7,7 @@ $table-dark-row: #f6f6f6;
 .form-container {
     background-color: color(neutral-lightest);
     color: $label-4;
+    margin-bottom: 18rem;
     padding: 2rem 9rem;
 
     &.boxed {
