--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -83,7 +83,7 @@
                         <div class="event">Reviewed</div>
                     </div>
                     <div class="label">
-                        <div class="event">{model.detail.barStatus}</div>
+                        <div class="event">{model.detail.barStatus || 'Corrected'}</div>
                     </div>
                 </div>
                 <div class="progress-bar">
