Errata layout fixes

--- a/src/app/pages/errata/detail/detail.html
+++ b/src/app/pages/errata/detail/detail.html
@@ -7,7 +7,7 @@
             </div>
             <div class="label-value-pair">
                 <div class="label"></div>
-                <div class="value">Questions about the resolution? <a mailto="support@openstax.org">Ask us</a></div>
+                <div class="value">Questions about the resolution? <a href="mailto:support@openstax.org">Ask us</a></div>
             </div>
         </div>
     </div>
@@ -20,7 +20,6 @@
     <div class="note">
         You can check the status of all errata submissions on the
         <a href="/errata/?book={encodeURIComponent(model.detail.bookTitle)}">
-            <span data-html="detail.bookTitle" skip="true"></span> Errata Page
-        </a>.
+            <span data-html="detail.bookTitle" skip="true"></span> Errata Page</a>.
     </div>
 </template>
