--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -20,7 +20,7 @@
         </div>
         <div class="helpbox {model.helpBoxVisible()}">
             Need help logging in or have general questions? Contact Support at
-            <a mailto="support@openstax.org">support@openstax.org</a>.
+            <a href="mailto:support@openstax.org">support@openstax.org</a>.
         </div>
         <div class="question">In which source did you find this error?</div>
         <div class="radio-columns">
@@ -41,7 +41,7 @@
         <div class="subnote">
             Please limit to one error per submission and include a suggested
             resolution if possible. If you have several to report, please
-            contact us at <a mailto="errata@openstax.org">errata@openstax.org</a>.
+            contact us at <a href="mailto:errata@openstax.org">errata@openstax.org</a>.
         </div>
         <span class="invalid-message">{model.validationMessage('source')}</span>
         <textarea maxlength="1000" name="detail" required></textarea>
