--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -88,17 +88,6 @@
             overflow: hidden;
         }
 
-        .body {
-            column-width: 57em;
-            height: 11rem;
-            max-height: 11rem;
-            width: auto;
-
-            div :first-child {
-                -webkit-margin-before: 0;
-            }
-        }
-
         .meta {
             border-bottom: thin solid color(neutral-lighter);
             color: color(neutral-light);
@@ -117,6 +106,17 @@
         .author {
             color: color(cyan);
             font-style: italic;
+        }
+    }
+
+    .excerpt .body {
+        column-width: 57em;
+        height: 11rem;
+        max-height: 11rem;
+        width: auto;
+
+        div :first-child {
+            -webkit-margin-before: 0;
         }
     }
 
