Fix iPhone calculator text field

--- a/src/app/components/calculator/calculator.scss
+++ b/src/app/components/calculator/calculator.scss
@@ -107,6 +107,7 @@ $narrow-tablet: 700px;
             font-size: 9.5rem;
             font-weight: inherit;
             outline: none;
+            padding: 0;
             text-align: center;
             width: 1.55em;
 
