--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -7,6 +7,9 @@
                 <p if="model.topLinkUrl">
                     {' '}<a href="{model.topLinkUrl}">{model.topLinkText}</a>
                 </p>
+                <p if="model.simpleMessage">
+                    {model.simpleMessage}
+                </p>
                 <p if="model.adoptionQuestion">{model.adoptionQuestion}
                     <if condition="model.defaultEmail">
                         {` `}We sent an email to {model.defaultEmail} confirming your submission.
