Different intro text on calculator for adoption vs interest

--- a/src/app/components/calculator/calculator.html
+++ b/src/app/components/calculator/calculator.html
@@ -1,6 +1,6 @@
 <template args="model">
     <div class="intro-paragraph">
-        Calculate how much your students will save this year
+        {model.introText}
     </div>
     <div class="input-blocks">
         <div class="{`cost block ${model.activeBlock === 'dollars' ? 'active' : ''}`}">
