Tooltip for lock icon

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -430,7 +430,6 @@
                 }
             }
         }
-
     }
 
     .resource {
@@ -483,6 +482,13 @@
                     font-size: 130%;
                     margin-right: 1rem;
                 }
+            }
+        }
+
+        .with-tooltip {
+            .tooltip {
+                transform: translateX(-45%);
+                width: 26rem;
             }
         }
     }
