--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -287,4 +287,5 @@ sup {
 @import 'components/responsive';
 @import 'components/social';
 @import 'components/strips';
+@import 'components/tooltip';
 @import 'components/tag-multi-select';
