--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,6 +51,16 @@ strong {
     font-weight: bold;
 }
 
+.page-loading > div {
+    opacity: 0;
+}
+
+.os-loader {
+    height: 0;
+    opacity: 0;
+    width: 0;
+}
+
 .no-bullets {
     // Hide bullets in IE
     list-style-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7);
@@ -283,6 +293,7 @@ sup {
 @import 'components/forms';
 @import 'components/headers';
 @import 'components/hero';
+@import 'components/loader';
 @import 'components/radio-buttons';
 @import 'components/responsive';
 @import 'components/social';
