Fix errata copy and Submit button padding

--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -6,10 +6,11 @@
             <div class="with-tooltip">
                 {model.moreAbout}
                 <div class="tooltip">
-                    <p>Textbook corrections are incorporated into the webview version regularly.
+                    <p>Textbook corrections are incorporated into the web view version regularly.
                       Instructor and student resources, such as test banks and student solution manuals, are
                       also updated regularly online.  New PDF versions of OpenStax textbooks that reflect
-                      errata are updated, with release notes, in June.</p>
+                      errata are updated, with release notes, in June. If there are no substantial changes
+                      for a book in a certain year, the PDF will not be updated that year.</p>
                       <p if="model.releaseNotes">
                           <a href="{model.releaseNotes}">
                               <i class="fa fa-cloud-download" aria-hidden="true"></i>
