--- a/src/styles/components/radio-buttons.scss
+++ b/src/styles/components/radio-buttons.scss
@@ -20,7 +20,7 @@ $custom-radio-active-inset-shadow:  inset 0 0 2px 3px rgba(0, 0, 0, 0.1);
 $custom-radio-focus-shadow:         0 0 0 2px transparentize(dodgerblue, 0.5);
 
 $custom-radio-disabled-bg:          lighten(black, 91.8%);
-$custom-radio-disabled-pip-color:   lighten(black, 80%);
+$custom-radio-disabled-pip-color:   rgba(color(cyan), 0.40);
 
 
 // Check variable values
