Buttons, links, and footer

--- a/src/app/components/buckets/bucket/bucket.html
+++ b/src/app/components/buckets/bucket/bucket.html
@@ -5,6 +5,6 @@
             <span class="title">{model.heading}</span>
             <blurb-html data-html="content" class="blurb" skip="true"></blurb-html>
         </div>
-        <a class="btn {model.btnClass}" href="{model.link}">{model.cta}</a>
+        <button class="{model.btnClass}" href="{model.link}">{model.cta}</button>
     </div>
 </template>
