--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -64,6 +64,7 @@
             }
         }
 
+        button,
         .btn {
             color: color(neutral-lightest);
             font-variant: normal;
