--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -1,9 +1,12 @@
 <template args="model">
     <div class="boxed">
-        <div class="hero-quote">Access. <span class="narrow-block">The future of education.</span></div>
+        <div class="hero-quote">
+            Access.
+            <span class="narrow-block">The future of education.</span>
+        </div>
 
-        <div class="copyright">
-            <ul class="no-bullets">
+        <div role="contentinfo">
+            <ul class="no-bullets" role="directory">
                 <li>
                     <a href="/license">Licensing</a>
                 </li>
@@ -47,24 +50,16 @@
             </p>
         </div>
 
-        <div class="social">
-            <ul class="no-bullets">
-                <li>
-                    <a class="btn btn-social facebook" href="https://www.facebook.com/openstax" title="facebook">
-                        Facebook
-                    </a>
-                </li>
-                <li>
-                    <a class="btn btn-social twitter" href="https://twitter.com/openstax" title="twitter">
-                        Twitter
-                    </a>
-                </li>
-                <li>
-                    <a class="btn btn-social linkedin" href="https://www.linkedin.com/company/openstax" title="linkedin">
-                        LinkedIn
-                    </a>
-                </li>
-            </ul>
+        <div class="social" role="directory">
+            <a class="btn btn-social facebook" href="https://www.facebook.com/openstax" title="facebook">
+                Facebook
+            </a>
+            <a class="btn btn-social twitter" href="https://twitter.com/openstax" title="twitter">
+                Twitter
+            </a>
+            <a class="btn btn-social linkedin" href="https://www.linkedin.com/company/openstax" title="linkedin">
+                LinkedIn
+            </a>
         </div>
     </div>
 </div>
