--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -7,7 +7,8 @@
     <nav class="meta-nav" skip="true"></nav>
     <nav class="nav" role="menubar" aria-label="Main menu" skip="true"></nav>
     <div class="submenu-zone">
-        <a class="close" href="#"><svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg>
+        <a class="close" role="button"><svg class="chevron"
+         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg>
             Back
         </a>
     </div>
