--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -67,7 +67,7 @@
             </ul>
         </li>
     </ul>
-    <button class="expand" type="button" role="button" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu" tabindex="0">
+    <button class="expand" aria-haspopup="true" aria-label="Toggle Meta Navigation Menu" tabindex="0">
       <span></span>
     </button>
 </template>
