--- a/src/styles/components/bucket.scss
+++ b/src/styles/components/bucket.scss
@@ -94,7 +94,7 @@
             line-height: 1.75;
         }
 
-        .btn {
+        button {
             font-size: 1.8rem;
             margin-top: 2.5rem;
             padding: 1.5rem 2rem;
