--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -3,10 +3,10 @@
         <div class="submenu {model.submenu}">
             <div class="pdf-submenu">
                 <h3>Choose PDF</h3>
-                <a href="{model.hiRes}" class="btn">High Resolution</a>
+                <a class="btn" href="{model.hiRes}">High Resolution</a>
                 <p>Better images, but a large file and a longer download time</p>
                 <if condition="model.loRes">
-                    <a href="{model.loRes}" class="btn">Low Resolution</a>
+                    <a class="btn" href="{model.loRes}">Low Resolution</a>
                     <p>Same content and shorter download, but some lower resolution images</p>
                 <else>
                     <p>Low resolution not available</p>
@@ -52,7 +52,7 @@
                 </a>
             </div>
             <div if="model.pdfLink" class="option">
-                <a href="{model.pdfLink}" class="show-pdf-submenu">
+                <a role="button" href="{model.pdfLink}" class="show-pdf-submenu">
                     <span class="fa fa-cloud-download"></span>
                     Download a PDF
                     <if condition="model.comingSoon">{' sample'}</if>
