--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -3,19 +3,22 @@
      enctype="multipart/form-data">
         <input type="hidden" name="submitted_by" value="{model.submittedBy}" />
         <div class="question">Select a subject.</div>
+        <span class="invalid-message">{model.validationMessage('book')}</span>
         <div skip="true"></div>
-        <select name="book">
+        <select name="book" required>
             <option each="book in model.books" value="{book.id}"
              data-string-value="{book.title}"
              selected="{book.title === model.selectedTitle ? '' : null}">{book.titleText}</option>
         </select>
         <div class="question">Select the type of error below.</div>
         <div class="radio-columns">
-            <span class="invalid-message">{model.validationMessage('source')}</span>
+            <span class="invalid-message">{model.validationMessage('error_type')}</span>
             <label each="eType in model.errorTypes">
-                <input type="radio" name="error_type" value="{eType}" required/>
+                <input type="radio" name="error_type" value="{eType}" required />
                 {eType}
-                <input if="eType === 'Other' && model.selectedError === 'Other'" type="text" name="error_type_other" maxlength="250" />
+                <input if="eType === 'Other' && model.selectedError === 'Other'" type="text"
+                 class="{model.visitedClass}"
+                 name="error_type_other" maxlength="250" required />
             </label>
         </div>
         <div class="helpbox {model.helpBoxVisible()}">
@@ -24,20 +27,21 @@
         </div>
         <div class="question">In which source did you find this error?</div>
         <div class="radio-columns">
-            <span class="invalid-message">{model.validationMessage('source')}</span>
+            <span class="invalid-message">{model.validationMessage('resource')}</span>
             <label each="sType in model.sourceTypes">
                 <input type="radio" name="resource" value="{sType}"
                  checked="{model.selectedSource === sType ? '' : null}"
                  disabled="{model.sourceProvided}" required/>
-                <span class="proxy"></span>
-                {sType}
+                {sType}{` `}
                 <div if="sType in model.subnotes" class="indented subnote">{model.subnotes[sType]}</div>
-                <input if="sType === 'Other' && model.selectedSource === 'Other'" type="text" name="resource_other" maxlength="250" />
+                <input if="sType === 'Other' && model.selectedSource === 'Other'" type="text"
+                 class="{model.visitedClass}"
+                 name="resource_other" maxlength="250" required />
             </label>
         </div>
         <div class="question">Where did you find this error?</div>
         <input type="text" name="location" placeholder="Page number, url, etc."
-         value="{model.location}" disabled="{model.sourceProvided}"/>
+         value="{model.location}" disabled="{model.sourceProvided}" />
         <div class="question">Tell us in detail about the error and your suggestion.</div>
         <div class="subnote">
             Please limit to one error per submission and include a suggested
@@ -56,7 +60,7 @@
         </div>
         <div if="model.file1" class="file-button">
             <label class="btn">
-                Add another file
+                Add file
                 <input type="file" class="hidden" name="file_2" class="btn" />
             </label>
             <span if="model.file2" class="file-name">{model.file2}</span>
