Errata form: make texture not required
Also fix submit button styling, handle failed submission

--- a/src/app/pages/errata/form/form.scss
+++ b/src/app/pages/errata/form/form.scss
@@ -90,7 +90,7 @@ $table-dark-row: #f6f6f6;
         float: none;
         text-transform: uppercase;
 
-        &[disable] {
+        &[disabled] {
             background-color: $label-4;
         }
     }
