--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -49,7 +49,7 @@
             contact us at <a href="mailto:errata@openstax.org">errata@openstax.org</a>.
         </div>
         <span class="invalid-message">{model.validationMessage('source')}</span>
-        <textarea maxlength="1000" name="detail" required></textarea>
+        <textarea maxlength="1000" name="detail"></textarea>
         <div class="question">Please add a screenshot or any other file that helps explain the error.</div>
         <div class="file-button">
             <label class="btn">
@@ -66,11 +66,8 @@
             <span if="model.file2" class="file-name">{model.file2}</span>
         </div>
         <div>
-            <if condition="model.submitted">
-                <input type="submit" class="btn" value="Submit" disabled />
-            <else>
-                <input type="submit" class="btn" value="Submit" />
-            </if>
+            <input type="submit" class="btn" value="Submit" disabled="{model.submitted ? '' : null}" />
+            <div if="model.submitFailed" class="invalid-message">{model.submitFailed}</div>
         </div>
     </form>
 </template>
