About page tooltip linkage and scrolling
Plus a couple on Home
Removed unused code

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,8 +1,8 @@
 <template args="model">
     <main id="maincontent" class="hide-until-loaded {model.loaded}">
-        <div class="book-banners" skip="true"></div>
+        <div class="book-banners" role="banner" skip="true"></div>
         <span class="scrolldown-chevron"><a href="#education"><i class="fa fa-chevron-down"></i></a></span>
-        <div class="quote-buckets" skip="true"></div>
+        <div class="quote-buckets" role="complementary" skip="true"></div>
         <div id="education" class="education" skip="true"></div>
         <div class="buckets" skip="true"></div>
     </main>
