--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -19,15 +19,17 @@
     </div>
 
     <div class="boxed">
-        <div each="group in model.bios" class="{group.name === 'team' ? 'our-team' : 'strategic-advisors'}">
+        <div each="group in model.bios" role="group" class="{group.name === 'team' ? 'our-team' : 'strategic-advisors'}">
             <h2>{group.name === 'team' ? model.ourTeamHeading : 'Strategic Advisors'}</h2>
             <div class="headshots">
                 <div each="member in group.members" class="headshot{model.tapped === member.id ? ' tapped' : ''}{member.hidden ? ' hidden' : ''}" data-id="{member.id}">
-                    <div class="picture-area{' text-'+member.textColor+' bg-'+member.bgColor}{member.image ? ' has-picture' : ''}">
+                    <div class="picture-area{' text-'+member.textColor+' bg-'+member.bgColor}{member.image ? ' has-picture' : ''}"
+                     aria-describedby="{member.name}">
                         <img if="member.image" src="{member.image}">
                         <div class="name">{member.name}</div>
                     </div>
-                    <div class="details">
+                    <div id="{member.name}" class="details" role="tooltip"
+                     aria-hidden="{model.tapped ? false : true}">
                         <div class="name">{member.name}</div>
                         <div if="member.position" class="title">{member.position}</div>
                         <div class="description">{member.description}</div>
