Errata form: make radio inputs same height as text inputs

--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -32,8 +32,9 @@
                 <input type="radio" name="resource" value="{sType}"
                  checked="{model.selectedSource === sType ? '' : null}"
                  required/>
-                {sType}{` `}
+                {` `}{sType}{` `}
                 <div if="sType in model.subnotes" class="indented subnote">{model.subnotes[sType]}</div>
+
                 <input if="sType === 'Other' && model.selectedSource === 'Other'" type="text"
                  class="{model.visitedClass}"
                  name="resource_other" maxlength="250" required />
