--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -1,4 +1,5 @@
 <template args="model">
+    <pop-up></pop-up>
     <div class="subhead text-content">
         <h1>Let us know you’re using OpenStax</h1>
         <p>Our books and their accompanying resources are yours to use, free.</p>
@@ -39,26 +40,26 @@
                         <input name="last_name" type="text" required>
                     </label>
                     <label>
-                        School name
-                        <span class="invalid-message">{model.validationMessage('company')}</span>
-                        <input name="company" type="text" required>
-                    </label>
-                </div>
-                <div class="col">
-                    <label>
-                        School url
-                        <span class="invalid-message">{model.validationMessage('URL')}</span>
-                        <input name="URL" type="text" required>
-                    </label>
-                    <label>
                         Email address
                         <span class="invalid-message">{model.validationMessage('email')}</span>
                         <input name="email" type="email" required>
                     </label>
+                </div>
+                <div class="col">
                     <label>
                         Phone number
                         <span class="invalid-message">{model.validationMessage('phone')}</span>
                         <input name="phone" type="text" required>
+                    </label>
+                    <label>
+                        School name
+                        <span class="invalid-message">{model.validationMessage('company')}</span>
+                        <input name="company" type="text" required>
+                    </label>
+                    <label>
+                        School url
+                        <span class="invalid-message">{model.validationMessage('URL')}</span>
+                        <input name="URL" type="url" value="http://" pattern=".*[.][a-zA-Z][a-zA-Z]+" required>
                     </label>
                 </div>
             </div>
@@ -95,7 +96,7 @@
                     <label>
                         How many students are using this book in your courses each semester?
                         <span class="invalid-message">{model.validationMessage('00NU00000052VId')}</span>
-                        <input name="00NU00000052VId" type="number" min="0" required>
+                        <input name="00NU00000052VId" type="number" min="1" required>
                     </label>
 
                     <label>
