--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -1,4 +1,5 @@
 <template args="model">
+    <pop-up skip="true"></pop-up>
     <if condition="model.submitted">
         <h1>Sending...</h1>
     <else>
@@ -32,27 +33,26 @@
                             <input name="last_name" type="text" required>
                         </label>
                         <label>
-                            School name
-                            <span class="invalid-message">{model.validationMessage('company')}</span>
-                            <input name="company" type="text" required>
-                        </label>
-                    </div>
-
-                    <div class="col">
-                        <label>
-                            School url
-                            <span class="invalid-message">{model.validationMessage('URL')}</span>
-                            <input name="URL" type="text" required>
-                        </label>
-                        <label>
                             Email address
                             <span class="invalid-message">{model.validationMessage('email')}</span>
                             <input name="email" type="email" required>
                         </label>
+                    </div>
+                    <div class="col">
                         <label>
                             Phone number
                             <span class="invalid-message">{model.validationMessage('phone')}</span>
                             <input name="phone" type="text" required>
+                        </label>
+                        <label>
+                            School name
+                            <span class="invalid-message">{model.validationMessage('company')}</span>
+                            <input name="company" type="text" required>
+                        </label>
+                        <label>
+                            School url
+                            <span class="invalid-message">{model.validationMessage('URL')}</span>
+                            <input name="URL" type="url" value="http://" pattern=".*[.][a-zA-Z][a-zA-Z]+" required>
                         </label>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         <label>
                             <span>How many students do you teach each semester?</span>
                             <span class="invalid-message"><br />{model.validationMessage('00NU00000052VId')}</span>
-                            <input name="00NU00000052VId" type="number" min="0" required>
+                            <input name="00NU00000052VId" type="number" min="1" required>
                         </label>
 
                         <label class="question">
