--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -1,5 +1,4 @@
 <template args="model">
-    <pop-up></pop-up>
     <div class="subhead text-content">
         <h1>Let us know you’re using OpenStax</h1>
         <p>Our books and their accompanying resources are yours to use, free.</p>
@@ -27,42 +26,7 @@
                 To get started with an OpenStax book, fill out this form and paste the
                 book URL in your syllabus.
             </p>
-            <div class="labeled-inputs row top-of-form">
-                <div class="col">
-                    <label>
-                        First name
-                        <span class="invalid-message">{model.validationMessage('first_name')}</span>
-                        <input name="first_name" type="text" required>
-                    </label>
-                    <label>
-                        Last name
-                        <span class="invalid-message">{model.validationMessage('last_name')}</span>
-                        <input name="last_name" type="text" required>
-                    </label>
-                    <label>
-                        Email address
-                        <span class="invalid-message">{model.validationMessage('email')}</span>
-                        <input name="email" type="email" required>
-                    </label>
-                </div>
-                <div class="col">
-                    <label>
-                        Phone number
-                        <span class="invalid-message">{model.validationMessage('phone')}</span>
-                        <input name="phone" type="text" required>
-                    </label>
-                    <label>
-                        School name
-                        <span class="invalid-message">{model.validationMessage('company')}</span>
-                        <input name="company" type="text" required>
-                    </label>
-                    <label>
-                        School url
-                        <span class="invalid-message">{model.validationMessage('URL')}</span>
-                        <input name="URL" type="url" value="http://" pattern=".*[.][a-zA-Z][a-zA-Z]+" required>
-                    </label>
-                </div>
-            </div>
+            <component data-id="contactInfo" skip="true"></component>
         </div>
 
         <div class="wrapper">
