--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -1,5 +1,4 @@
 <template args="model">
-    <pop-up skip="true"></pop-up>
     <if condition="model.submitted">
         <h1>Sending...</h1>
     <else>
@@ -20,42 +19,7 @@
                     <input type="hidden" name="lead_source" value="OS Interest Form">
                     <input type="hidden" name="00NU00000055spw" value="High Interest in Adopting">
                 </div>
-                <div class="labeled-inputs row top-of-form">
-                    <div class="col">
-                        <label>
-                            First name
-                            <span class="invalid-message">{model.validationMessage('first_name')}</span>
-                            <input name="first_name" type="text" required>
-                        </label>
-                        <label>
-                            Last name
-                            <span class="invalid-message">{model.validationMessage('last_name')}</span>
-                            <input name="last_name" type="text" required>
-                        </label>
-                        <label>
-                            Email address
-                            <span class="invalid-message">{model.validationMessage('email')}</span>
-                            <input name="email" type="email" required>
-                        </label>
-                    </div>
-                    <div class="col">
-                        <label>
-                            Phone number
-                            <span class="invalid-message">{model.validationMessage('phone')}</span>
-                            <input name="phone" type="text" required>
-                        </label>
-                        <label>
-                            School name
-                            <span class="invalid-message">{model.validationMessage('company')}</span>
-                            <input name="company" type="text" required>
-                        </label>
-                        <label>
-                            School url
-                            <span class="invalid-message">{model.validationMessage('URL')}</span>
-                            <input name="URL" type="url" value="http://" pattern=".*[.][a-zA-Z][a-zA-Z]+" required>
-                        </label>
-                    </div>
-                </div>
+                <component data-id="contactInfo" skip="true"></component>
             </div>
 
             <div class="wrapper">
